# rs-thrift2ts

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
__test__/idl/: basic_types.thrift  constants.thrift  containers.thrift  enums.thrift  exceptions.thrift  service.thrift  services.thrift  structs.thrift
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  ts_generator.rs
src/generator/: mod.rs  ts_generator.rs
src/templates/: constant.rs  cpp_include.rs  enum.rs  exception.rs  include.rs  mod.rs  namespace.rs  service.rs  struct.rs  type_def.rs  union.rs
src/utils/: type.rs
