[package]
authors = ["Jacob <jacob-lcs@qq.com>"]
edition = "2021"
name    = "rs-thrift2ts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi                   = "2"
napi-derive            = "2"
pilota-thrift-parser = "0.11"
walkdir = "2"
rayon = "1"
anyhow = "1"
log = "0.4.22"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
